test/expected/glob_unmatched_is_error.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "a*.zzznomatch"]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "a*.zzznomatch"
]
shit: 2:6: error: No matches for the glob pattern 'a*.zzznomatch'.
     2 |  echo a*.zzznomatch
       |       ^~~~~~~~~~~~~ here.
